Added spy tools.
Author: dustin
Date: 1999/10/20 02:25:28

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-138

--- a/java/java/rmi/objectserver/Makefile
+++ b/java/java/rmi/objectserver/Makefile
@@ -21,7 +21,7 @@ RHash.jar: $(CLASSES)
 	$(JAR) cv0f $@ $(CLASSES)
 
 serve: RHash.jar
-	$(JAVA) -Djava.rmi.server.codebase=file://${PWD}/ RObjectImpl
+	$(JAVA) -Djava.rmi.server.codebase=file://${PWD}/ RObjectImpl &
 
 RObjectImpl_Skel.class: RObjectImpl.class
 	$(RMIC) -d . RObjectImpl
