--- a/java/java/rmi/objectserver/Makefile
+++ b/java/java/rmi/objectserver/Makefile
@@ -7,8 +7,9 @@ JAVAC=$(JAVAHOME)/bin/javac
 RMIC=$(JAVAHOME)/bin/rmic
 JAVA=$(JAVAHOME)/bin/java
 
-CLASSES=Example.class RHash.class RObject.class RObjectImpl.class \
-	RObjectImpl_Skel.class RObjectImpl_Stub.class
+CLASSES=Example.class net/spy/RHash.class net/spy/RObject.class \
+	net/spy/RObjectImpl.class net/spy/RObjectImpl_Skel.class \
+	net/spy/RObjectImpl_Stub.class
 
 .SUFFIXES: .java .class .jar
 
@@ -18,13 +19,13 @@ clean:
 	rm -f $(CLASSES) RHash.jar
 
 RHash.jar: $(CLASSES)
-	$(JAR) cv0f $@ $(CLASSES)
+	$(JAR) cv0f $@ net
 
 serve: RHash.jar
-	$(JAVA) -Djava.rmi.server.codebase=file://${PWD}/ RObjectImpl &
+	$(JAVA) -Djava.rmi.server.codebase=file://${PWD}/ net.spy.RObjectImpl &
 
-RObjectImpl_Skel.class: RObjectImpl.class
-	$(RMIC) -d . RObjectImpl
+net/spy/RObjectImpl_Skel.class: net/spy/RObjectImpl.class
+	$(RMIC) -d . net.spy.RObjectImpl
 
 .java.class:
 	$(JAVAC) $<
