Smart time based config caching.
Author: dustin
Date: 1999/10/20 08:40:29

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-145

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -23,11 +23,11 @@ SDEST=bleu.west.spy.net:/usr/local/apache/java
 all: spy.jar
 
 spy.jar: $(CLASSES)
-	$(JAR) cv0f $@ net
+	$(JAR) cv0f $@ $(CLASSES)
 
 install: all
 	cp spy.jar $(FDEST)
-	$(SCP) spy.jar $(SDEST)
+	# $(SCP) spy.jar $(SDEST)
 
 clean:
 	rm -f $(CLASSES) spy.jar
