Added SpyUtil, which currently only includes shuffle.
Author: dustin
Date: 1999/11/19 02:10:59

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-151

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -13,7 +13,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/SpyLog.class net/spy/SpyLogEntry.class \
 	net/spy/SpyToker.class net/spy/SpyLogFlusher.class \
 	net/spy/SpyConfigReader.class net/spy/net/SNPP.class \
-	net/spy/net/HTTPFetch.class
+	net/spy/net/HTTPFetch.class net/spy/SpyUtil.class
 
 FDEST=/home/dustin/lib/java
 SCP=scp
