A working test program!
Author: dustin
Date: 1999/11/19 07:29:17

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-152

--- a/java/java/servlet/test/Makefile
+++ b/java/java/servlet/test/Makefile
@@ -17,7 +17,8 @@ DEST=bleu.west.spy.net:/usr/local/apache/java
 
 CLASSES=TestTaker.class net/spy/test/TestSession.class \
 	net/spy/test/TestConfig.class net/spy/test/TestSessionSweeper.class \
-	net/spy/test/TestUser.class
+	net/spy/test/TestUser.class net/spy/test/TestTest.class \
+	net/spy/test/TestQuestion.class net/spy/test/TestAnswer.class
 
 .SUFFIXES: .java .class .jar
 
