SpyDB will now handle more than one connection pool.
Author: dustin
Date: 2000/01/12 07:59:05

SpyDB provides facilities for issuing queries now.

Some other stuff had other changes.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-177

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -4,6 +4,7 @@ JAVAHOME=/usr/pkg/java
 JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac
 JAVA=$(JAVAHOME)/bin/java
+RMIC=$(JAVAHOME)/bin/rmic
 C1=/home/dustin/lib/java/jsdk.jar:/home/dustin/lib/java/DBCB.jar
 C2=/home/dustin/lib/java/RHash.jar:/home/dustin/lib/java/cos.jar
 C3=/home/dustin/lib/java/xml4j.jar
@@ -14,10 +15,16 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/SpyToker.class net/spy/SpyLogFlusher.class \
 	net/spy/SpyConfigReader.class net/spy/net/SNPP.class \
 	net/spy/net/HTTPFetch.class net/spy/SpyUtil.class \
-	net/spy/util/ImageData.class
+	net/spy/util/ImageData.class net/spy/rmi/ImageServer.class \
+	net/spy/rmi/ImageServerImpl.class net/spy/rmi/RObject.class \
+	net/spy/rmi/ImageServerImpl_Stub.class \
+	net/spy/rmi/ImageServerImpl_Skel.class net/spy/rmi/RObjectImpl.class \
+	net/spy/rmi/RObjectImpl_Stub.class net/spy/rmi/RObjectImpl_Skel.class \
+	net/spy/rmi/DoBindings.class net/spy/RHash.class
+
 
 FDEST=/home/dustin/lib/java
-SCP=rcp
+SCP=scp
 SDEST=bleu.west.spy.net:/usr/local/apache/java
 
 .SUFFIXES: .java .class .jar
@@ -29,10 +36,24 @@ spy.jar: $(CLASSES)
 
 install: all
 	cp spy.jar $(FDEST)
-	# $(SCP) spy.jar $(SDEST)
+	$(SCP) spy.jar $(SDEST)
 
 clean:
 	rm -f $(CLASSES) spy.jar
+
+net/spy/rmi/ImageServerImpl_Skel.class: \
+	net/spy/rmi/ImageServerImpl.class
+	$(RMIC) -d . net.spy.rmi.ImageServerImpl
+
+net/spy/rmi/ImageServerImpl_Stub.class: \
+        net/spy/rmi/ImageServerImpl_Skel.class
+
+net/spy/rmi/RObjectImpl_Skel.class: \
+	net/spy/rmi/RObjectImpl.class
+	$(RMIC) -d . net.spy.rmi.RObjectImpl
+
+net/spy/rmi/RObjectImpl_Stub.class: \
+	net/spy/rmi/RObjectImpl_Skel.class
 
 .java.class:
 	env CLASSPATH=$(CLASSPATH) $(JAVAC) $<
