Damnit, Skytel wouldn't accept it without the CRLF.
Author: dustin
Date: 2000/01/19 08:03:41

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-186

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -20,7 +20,8 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/rmi/ImageServerImpl_Stub.class \
 	net/spy/rmi/ImageServerImpl_Skel.class net/spy/rmi/RObjectImpl.class \
 	net/spy/rmi/RObjectImpl_Stub.class net/spy/rmi/RObjectImpl_Skel.class \
-	net/spy/rmi/DoBindings.class net/spy/RHash.class
+	net/spy/rmi/DoBindings.class net/spy/RHash.class \
+	net/spy/temperature/SpyTemp.class
 
 
 FDEST=/home/dustin/lib/java
