--- a/java/java/ejb/net/spy/consult/Consultant.properties
+++ b/java/java/ejb/net/spy/consult/Consultant.properties
@@ -1,5 +1,5 @@
 db.Field.id=consultant_id
-db.Field.fn=first_naem
+db.Field.fn=first_name
 db.Field.ln=last_name
 db.Field.ssn=social
 db.Finder.findByPrimaryKey=where consultant_id = ?
