A somewhat working bean.
Author: dustin
Date: 2000/01/22 11:42:51

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-189

--- a/java/java/ejb/net/spy/consult/Makefile
+++ b/java/java/ejb/net/spy/consult/Makefile
@@ -40,7 +40,7 @@ GENCLASSES=BullConsultantBeanConsultantHome_Skel.class \
 all: $(CLASSES) $(SER) $(GENCLASSES)
 
 genic: Consultant.ser
-	env CLASSPATH=$(CLASSPATH) JONAS_ROOT=$(JONAS_ROOT) $(GENIC) -d ../../.. Consultant.ser
+	env CLASSPATH=$(CLASSPATH) JONAS_ROOT=$(JONAS_ROOT) $(GENIC) -keepgenerated -d ../../.. Consultant.ser
 
 $(GENCLASSES): genic
 
@@ -50,7 +50,7 @@ test: all
 clean:
 	rm -f $(CLASSES) $(SER) $(GENCLASSES)
 
-Consultant.ser: Consultant.txt Consultant.properties
+Consultant.ser: $(CLASSES) Consultant.txt Consultant.properties
 
 .java.class:
 	env CLASSPATH=$(CLASSPATH) $(JAVAC) -d ../../.. $<
