--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -21,7 +21,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/rmi/ImageServerImpl_Skel.class net/spy/rmi/RObjectImpl.class \
 	net/spy/rmi/RObjectImpl_Stub.class net/spy/rmi/RObjectImpl_Skel.class \
 	net/spy/rmi/DoBindings.class net/spy/RHash.class \
-	net/spy/temperature/SpyTemp.class
+	net/spy/temperature/SpyTemp.class net/spy/SpyRunner.class
 
 
 FDEST=/home/dustin/lib/java
