Makefile got stuff removed.
Author: dustin
Date: 2000/01/27 10:23:00

Try harder to close the damned SNPP thing.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-206

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -22,7 +22,10 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/rmi/ImageServerImpl_Skel.class net/spy/rmi/RObjectImpl.class \
 	net/spy/rmi/RObjectImpl_Stub.class net/spy/rmi/RObjectImpl_Skel.class \
 	net/spy/rmi/DoBindings.class net/spy/RHash.class \
-	net/spy/temperature/SpyTemp.class net/spy/SpyRunner.class
+	net/spy/temperature/SpyTemp.class net/spy/SpyRunner.class \
+	net/spy/nmap/NmapEntry.class net/spy/nmap/NmapPort.class \
+	net/spy/nmap/NmapParser.class
+
 
 PACKAGES=net.spy net.spy.net net.spy.rmi net.spy.temperature net.spy.util
 
