--- a/perl/perl/ldap/audit.conf
+++ b/perl/perl/ldap/audit.conf
@@ -1,7 +1,18 @@
-ldap_server=dhcp-104
+# master ldap server
+ldap_server=ldapserver.something.something
+# whom to bind as
 binddn=
 bindpw=
-base=dc=spy,dc=net
-fixit=1
+# Search base
+base=
+# Whether to fix the problems
+fixit=0
+# Whether to do debug or not
 debug=0
-slave_servers=printer
+# Slave servers to compare against
+slave_servers=ldapslave1
+
+# Optionally, you can specify these flags for each client:
+# slave.ldapslave1.hostname=ldapslave1.something.something
+# slave.ldapslave1.binddn=cn=alternate user
+# slave.ldapslave1.bindpw=alternatepw
