Added thermometer thingy.
Author: dustin
Date: 2000/03/10 08:46:56

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-221

--- a/java/java/servlet/temperatures/Makefile
+++ b/java/java/servlet/temperatures/Makefile
@@ -1,11 +1,11 @@
 # Makefile for RHash, remote object server stuff.
 
-JAVAHOME=/usr/pkg/java
+JAVAHOME=/usr/java
 JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac
 JAVA=$(JAVAHOME)/bin/java
 MYLIB=/home/dustin/lib/java
-C1=$(MYLIB)/jsdk.jar
+C1=$(MYLIB)/jsdk.jar:$(MYLIB)/gifservlet.jar
 C2=$(MYLIB)/spy.jar
 CLASSPATH=$(C1):$(C2):.
 SERVLETRUNNER=/home/dustin/lib/java/JSDK2.0/bin/servletrunner
@@ -14,7 +14,8 @@ SCP=rcp
 DEST=bleu.west.spy.net:/usr/local/apache/java/net/spy/temperature/
 # DEST=170.1.69.194:/usr/local/apache/java
 
-CLASSES=net/spy/temperature/Temperature.class
+CLASSES=net/spy/temperature/Temperature.class \
+	net/spy/temperature/Thermometer.class
 
 .SUFFIXES: .java .class .jar
 
