Clean up more HTML in the HTTPFetch class.
Author: dustin
Date: 2000/03/22 02:43:47

Added some base functionality to interface Weather.com

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-234

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -27,7 +27,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/nmap/NmapEntry.class net/spy/nmap/NmapPort.class \
 	net/spy/nmap/NmapParser.class net/spy/WatchDog.class \
 	net/spy/info/Stocks.class net/spy/info/StockQuote.class \
-	net/spy/info/UPS.class
+	net/spy/info/UPS.class net/spy/info/Weather.class
 
 
 PACKAGES=net.spy net.spy.net net.spy.rmi net.spy.temperature net.spy.util \
