--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -28,6 +28,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/nmap/NmapParser.class net/spy/WatchDog.class \
 	net/spy/info/Info.class \
 	net/spy/info/Stocks.class net/spy/info/StockQuote.class \
+	net/spy/info/eBay.class \
 	net/spy/info/UPS.class net/spy/info/Weather.class
 
 
