Wow, lots of updates.
Author: dustin
Date: 2000/04/17 01:30:55

PreparedStatement from SpyDB.

More info from Weather.

More info from UPS.

Pingable ImageServer

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-242

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -29,6 +29,9 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/info/Info.class \
 	net/spy/info/Stocks.class net/spy/info/StockQuote.class \
 	net/spy/info/eBay.class \
+	net/spy/info/FedEx.class \
+	net/spy/info/Traffic.class \
+	net/spy/info/FlightTracker.class \
 	net/spy/info/UPS.class net/spy/info/Weather.class
 
 
