Database thingy update.
Author: dustin
Date: 2000/05/01 04:32:18

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-250

--- a/java/java/ejb/net/spy/consult/Consultant.properties
+++ b/java/java/ejb/net/spy/consult/Consultant.properties
@@ -3,7 +3,7 @@ db.Field.fn=first_name
 db.Field.ln=last_name
 db.Field.ssn=social
 db.Finder.findByPrimaryKey=where consultant_id = ?
-db.Finder.findByLastName=where first_name = ?
+db.Finder.findByLastName=where last_name = ?
 db.Finder.findByFirstName=where first_name = ?
 db.Finder.findAllAccounts=
 db.TableName=consultant
