Breaking stuff sucks.
Author: dustin
Date: 2000/05/01 07:11:25

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-252

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -1,12 +1,12 @@
 # Makefile for RHash, remote object server stuff.
 
-JAVAHOME=/usr/pkg/java
+JAVAHOME=/afs/@cell/local/@sys/java
 JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac
 JAVA=$(JAVAHOME)/bin/java
 RMIC=$(JAVAHOME)/bin/rmic
 JAVADOC=$(JAVAHOME)/bin/javadoc
-MYLIB=/home/dustin/lib/java
+MYLIB=/afs/@cell/misc/web/java
 C1=$(MYLIB)/jsdk.jar:$(MYLIB)/DBCB.jar:$(MYLIB)/postgresql.jar
 C2=$(MYLIB)/RHash.jar:$(MYLIB)/cos.jar
 C3=$(MYLIB)/xml4j.jar:$(MYLIB)/oromatcher.jar
