Slightly better structure, and much better comments.
Author: dustin
Date: 2000/05/10 08:36:27

imported from: dustin@spy.net--projects/snippets--perl--1.0--patch-128

--- a/perl/perl/net/mailfw/mailfw.conf
+++ b/perl/perl/net/mailfw/mailfw.conf
@@ -4,3 +4,5 @@ mail_server = bob
 mime_ok = mime.ok
 # File containing list of bad extensions
 ext_bad = ext.bad
+# Temporary directory where the mime parts dump into.
+tmpdir = /tmp
