--- a/perl/perl/net/mailfw/mailfw.conf
+++ b/perl/perl/net/mailfw/mailfw.conf
@@ -6,3 +6,5 @@ mime_ok = mime.ok
 ext_bad = ext.bad
 # Temporary directory where the mime parts dump into.
 tmpdir = /tmp
+# Where the unprocessed mail is kept
+mailstore = /tmp
