Added getInt to SpyConfig (finally)
Author: dustin
Date: 2000/06/20 07:14:27

Apparently made a lot of changes to a lot of other things.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-267

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -1,6 +1,6 @@
 # Makefile for RHash, remote object server stuff.
 
-JAVAHOME=/usr/java
+JAVAHOME=/usr/pkg/java
 JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac
 JAVA=$(JAVAHOME)/bin/java
@@ -33,6 +33,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/info/FedEx.class \
 	net/spy/info/Traffic.class \
 	net/spy/info/FlightTracker.class \
+	net/spy/info/BigWords.class \
 	net/spy/info/UPS.class net/spy/info/Weather.class
 
 
