Added SNPP pooling stuff.
Author: dustin
Date: 2000/07/04 09:44:08

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-299

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -41,6 +41,9 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/pool/PoolFiller.class \
 	net/spy/pool/PooledObject.class \
 	net/spy/pool/JDBCPoolFiller.class \
+	net/spy/pool/JDBCPoolAble.class \
+	net/spy/pool/SNPPPoolFiller.class \
+	net/spy/pool/SNPPPoolAble.class \
 
 
 PACKAGES=net.spy net.spy.net net.spy.rmi net.spy.temperature \
