Don't just give up on all of them if one doesn't work right.
Author: dustin
Date: 2000/07/16 09:39:11

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-304

--- a/java/java/swing/Makefile
+++ b/java/java/swing/Makefile
@@ -4,7 +4,7 @@ JAVAHOME=/usr/pkg/java
 JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac
 JAVA=$(JAVAHOME)/bin/java
-C1=/home/dustin/lib/java/swingall.jar:/home/dustin/lib/java/postgresql.jar
+C1=/home/dustin/lib/java/swingall.jar
 C2=/home/dustin/lib/java/spy.jar
 CLASSPATH=$(C1):$(C2):.
 
