Warn loudly, at runtime, if anything tries to use a dep...
Author: dustin
Date: 2000/07/27 20:05:47

Warn loudly, at runtime, if anything tries to use a deprecated API for
logging.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-325

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -51,7 +51,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 
 
 PACKAGES=net.spy net.spy.net net.spy.rmi net.spy.temperature \
-	net.spy.info net.spy.pool
+	net.spy.info net.spy.pool net.spy.log
 
 FDEST=/home/dustin/lib/java
 SCP=scp
