OK, this works...
Author: dustin
Date: 2000/07/30 03:01:44

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-298

--- a/c/c/net/pcap/acct/Makefile.in
+++ b/c/c/net/pcap/acct/Makefile.in
@@ -1,7 +1,9 @@
-CFLAGS=-g -I/usr/local/include
+# Copyright (c) 2000  Dustin Sallings <dustin@spy.net>
+
+CFLAGS=-O2 -Wall -I/usr/local/include
 LIBS=@LIBS@
-acct: filter.o main.o
-	$(CC) -o $@ filter.o main.o $(LIBS)
+acct: filter.o main.o hash.o mymalloc.o
+	$(CC) -o $@ filter.o main.o hash.o mymalloc.o $(LIBS)
 
 clean:
 	@touch blahblah.o
