Added pthread support.
Author: dustin
Date: 2000/07/30 04:05:35

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-299

--- a/c/c/net/pcap/acct/Makefile.in
+++ b/c/c/net/pcap/acct/Makefile.in
@@ -1,7 +1,7 @@
 # Copyright (c) 2000  Dustin Sallings <dustin@spy.net>
 
-CFLAGS=-O2 -Wall -I/usr/local/include
-LIBS=@LIBS@
+CFLAGS=-O2 -Wall @DEFS@ @CPPFLAGS@ @CFLAGS@ -I/usr/local/include
+LIBS=@LDFLAGS@ @LIBS@
 acct: filter.o main.o hash.o mymalloc.o
 	$(CC) -o $@ filter.o main.o hash.o mymalloc.o $(LIBS)
 
