--- a/c/c/net/pcap/acct/configure.in
+++ b/c/c/net/pcap/acct/configure.in
@@ -19,6 +19,7 @@ AC_ARG_ENABLE(pthread,
 	AC_MSG_RESULT(yep)
 	AC_DEFINE(USE_PTHREAD)
 	AC_CHECK_LIB(pthread, pthread_mutex_init)
+	AC_CHECK_LIB(c_r, pthread_mutex_init)
 	AC_CHECK_HEADERS(pthread.h),
 	AC_MSG_RESULT(nope)
 	)
