LDIF stuff is more efficient now, also makes more sense.
Author: dustin
Date: 2000/08/17 23:37:17

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-328

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -37,6 +37,7 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/info/BigWords.class \
 	net/spy/info/UPS.class net/spy/info/Weather.class \
 	net/spy/util/SpyLDIF.class \
+	net/spy/util/SpyLDIFReader.class \
 	net/spy/pool/ObjectPool.class \
 	net/spy/pool/ObjectPoolCleaner.class \
 	net/spy/pool/PoolAble.class \
