Added a small icon.
Author: dustin
Date: 2000/08/22 08:15:10

Switched to a newer version of pilrc that allows me to add a small
icon.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-308

--- a/c/c/palm/irtime/Makefile
+++ b/c/c/palm/irtime/Makefile
@@ -1,4 +1,5 @@
 BIN=/emul/linux/usr/local/bin
+PILRC=pilrc
 CC=$(BIN)/m68k-palmos-coff-gcc
 CFLAGS=-O1 #-DERROR_CHECK_LEVEL=2
 LD=$(BIN)/m68k-palmos-coff-gcc
@@ -13,7 +14,7 @@ irtime.prc: timestamp-grc timestamp-bin
 	$(BIN)/build-prc irtime.prc "IrTime" IRTM *.grc *.bin
 
 timestamp-bin: irtime.rcp
-	$(BIN)/pilrc irtime.rcp
+	$(PILRC) irtime.rcp
 	touch timestamp-bin
 
 timestamp-grc: $(OBJS)
