Remove the prc on clean, too.
Author: dustin
Date: 2000/08/22 08:18:46

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-309

--- a/c/c/palm/irtime/Makefile
+++ b/c/c/palm/irtime/Makefile
@@ -28,7 +28,7 @@ irtime.rcp: irtime.h
 
 clean:
 	rm -f *~
-	rm -f irtime $(OBJS)
+	rm -f irtime $(OBJS) irtime.prc
 	rm -f *.bin *.grc
 	rm -f timestamp-grc timestamp-bin
 
