--- a/c/c/net/tcp/websplat/Makefile.in
+++ b/c/c/net/tcp/websplat/Makefile.in
@@ -1,5 +1,5 @@
 # Copyright (c) 1998  Dustin Sallings
-# $Id: Makefile.in,v 1.1 1998/06/27 04:08:32 dustin Exp $
+# $Id: Makefile.in,v 1.2 2000/10/03 05:52:54 dustin Exp $
 
 SHELL=/bin/sh
 CC=@CC@
@@ -11,8 +11,8 @@ LIBS=@LIBS@
 LDFLAGS=$(LIBS)
 
 .SUFFIXES: .c .o .l .a .ln
-OBJS=main.o sockets.o
-SRCS=main.c sockets.c
+OBJS=main.o sockets.o url.o
+SRCS=main.c sockets.c url.c
 LINTS=main.ln sockets.ln
 EXES=websplat
 AUTOJUNK=config.h config.status config.cache config.log Makefile
