Lots of fixups for cleanup, naming, etc...
Author: dustin
Date: 2000/10/13 06:50:12

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-336

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -65,7 +65,7 @@ SDEST=bleu.west.spy.net:/usr/local/apache/java
 
 .SUFFIXES: .java .class .jar
 
-all: spy.jar
+all: $(CLASSES)
 
 doc: $(CLASSES)
 	$(JAVADOC) -public -d doc $(PACKAGES)
