added jar target
Author: dustin
Date: 2000/10/17 07:07:45

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-344

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -72,6 +72,8 @@ all: $(CLASSES) $(CACHE_CLASSES)
 doc: $(CLASSES)
 	$(JAVADOC) -public -d doc $(PACKAGES)
 
+jar: spy.jar
+
 spy.jar: $(CLASSES)
 	$(JAR) cv0f $@ $(CLASSES) net/spy/cache/*class
 
