Get rid of generated java code.
Author: dustin
Date: 2000/11/05 09:13:50

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-360

--- a/java/java/spytools/Makefile
+++ b/java/java/spytools/Makefile
@@ -64,6 +64,10 @@ CLASSES=net/spy/SpyConfig.class net/spy/SpyDB.class \
 	net/spy/db/CachedResultSet.class \
 	net/spy/db/SpyCacheDB.class
 
+# Extra stuff to be cleaned
+GENERATED=net/spy/db/CachePreparedStatement.java \
+	net/spy/db/CachedResultSet.java
+
 PACKAGES=net.spy net.spy.net net.spy.rmi net.spy.temperature \
 	net.spy.info net.spy.pool net.spy.log net.spy.cache net.spy.util \
 	net.spy.db
@@ -89,7 +93,7 @@ install: all
 	$(SCP) spy.jar $(SDEST)
 
 clean:
-	rm -f $(CLASSES) spy.jar
+	rm -f $(CLASSES) $(GENERATED) spy.jar
 
 net/spy/rmi/RObjectImpl_Skel.class: \
 	net/spy/rmi/RObjectImpl.class
